# wp-infras

./: .gitignore  Cargo.toml  README.md
_gal/: Cargo_tpl.toml  work.gxl
wp-conf-base/: Cargo.toml
wp-conf-base/src/: connector.rs  lib.rs  structure.rs  tags.rs  traits.rs
wp-conf-base/tests/: connector_tests.rs  structure_tests.rs
wp-data-fmt/: Cargo.toml
wp-data-fmt/src/: csv.rs  fmt_meta.rs  formatter.rs  json.rs  kv.rs  lib.rs  proto.rs  raw.rs  sql.rs
wp-data-fmt/tests/: nginx_csv_snapshot.rs  nginx_json_snapshot.rs  nginx_kv_snapshot.rs  nginx_proto_txt_snapshot.rs  nginx_raw_snapshot.rs  nginx_sql_snapshot.rs
wp-error/: CODES.md  Cargo.toml  README.md
wp-error/src/: codes.rs  config_error.rs  http_map.rs  http_respond.rs  knowledge.rs  lib.rs  parse_error.rs  run_error.rs  util.rs
wp-error/src/error_handling/: mod.rs  strategy.rs  target.rs
wp-error/tests/: codes_test.rs
wp-log/: Cargo.toml
wp-log/src/: conf.rs  lib.rs  macro_def.rs
wp-specs/: Cargo.toml
wp-specs/src/: lib.rs
