[package]
name = "wp-conf-base"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wp_conf_base"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
orion_conf = { workspace = true }
orion-variate= { workspace = true }
wp-model-core ={ workspace = true }
derive_more = { workspace = true }
wp-connector-api = { workspace = true}
serde_json = { workspace = true }
